# pgdog

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  example.pgdog.toml  pgdog.toml
.github/workflows/: ci.yml  package.yml
dev/: docs_redirect.html  sync_docs.sh
examples/demo/src/: main.rs
examples/multi_tenant/: docker-compose.yml  invoices.csv  pgdog.toml  users.toml
integration/: common.sh  pgdog.toml  setup.sh
integration/dry_run/: dev.sh  package-lock.json  package.json  pgdog.toml
integration/dry_run/test/: sequelize.js
integration/load_balancer/: pgdog.toml
integration/logical/: README.md  gutenberg.py  log.sh  pgdog.toml  reset.sh  users.toml
integration/mirror/: dev.sh  pgdog.toml  run.sh  users.toml
integration/plugins/: Gemfile  dev.sh  extended_spec.rb  pgdog.toml  run.sh
integration/pub_sub/: pgdog.toml
integration/python/: globals.py  test_asyncpg.py  test_prepared.py  test_sqlalchemy.py
integration/ruby/: ar_spec.rb  pg_spec.rb  rspec_helper.rb
integration/rust/: Cargo.toml
pgdog/: CLAUDE.md  Cargo.toml  build.rs
pgdog-macros/: Cargo.toml
pgdog-macros/src/: lib.rs
pgdog-plugin/: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
pgdog-plugin-build/: Cargo.toml
pgdog-plugin-build/src/: lib.rs
pgdog-plugin/include/: types.h
pgdog-plugin/src/: ast.rs  bindings.rs  comp.rs  context.rs  lib.rs  parameters.rs  plugin.rs  prelude.rs  string.rs
pgdog/src/: cli.rs  lib.rs  main.rs  util.rs
pgdog/tests/: pgbench.sh
plugins/: README.md
plugins/pgdog-example-plugin/: Cargo.toml
(+231 files in other folders)
