[workspace]

members = [
    "examples/demo",
    "integration/rust",
    "pgdog", "pgdog-macros",
    "pgdog-plugin", "pgdog-plugin-build", "plugins/pgdog-example-plugin",
]
resolver = "2"

# [patch.crates-io]
# tokio = { path = "../tokio/tokio" }

[profile.release]
codegen-units = 1
lto = true

[profile.flamegraph]
inherits = "release"
lto = false
codegen-units = 16
debug = true
