[package]
name = "pgdog-macros"
version = "0.1.1"
edition = "2024"
authors = ["Lev Kokotov <lev@pgdog.dev>"]
license = "MIT"
description = "Macros used by the pgdog-plugin crate to generate safe FFI functions"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
